# multimodal-rag

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/corpus/: artix7_errata.md  cycloneiv_datasheet.md  ds181_artix7_datasheet_v1.5.md  ds181_artix7_datasheet_v1.8.md  streamflow_architecture_guide.md  ug470_artix7_config_userguide.md  xapp1234_selectio.md
eval/: eval.py  questions.yaml
scripts/: ingest.py  query.py  tui.py
src/mmrag/: __init__.py  agent.py  config.py  retriever.py  schema.py  session.py  tui.py  util.py
src/mmrag/embed/: base.py  hash_fallback.py  voyage.py
src/mmrag/generate/: answer.py
src/mmrag/ingest/: chunk.py  graph.py  metadata.py  parse.py  pipeline.py
src/mmrag/rerank/: voyage_rerank.py
src/mmrag/store/: bm25.py  filters.py  graph.py  hybrid.py  pg.py  vector.py
tests/: conftest.py  test_config.py  test_ingest.py  test_retrieval.py  test_session.py  test_tui.py
