[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodal-rag"
version = "0.1.0"
description = "A multimodal RAG assistant (text + figures) with verifiable citations, hybrid retrieval, and Postgres/pgvector."
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "rank-bm25>=0.2.2",
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    "numpy>=1.24",
    "neo4j>=5.14",
]

[project.optional-dependencies]
# Terminal UI.
tui = [
    "textual>=0.60",
]
# Cloud generation + multimodal embeddings + reranking.
cloud = [
    "anthropic>=0.40",
    "voyageai>=0.2",
    "pillow>=10.0",
]
# Real document PDF ingestion (layout + tables + embedded images).
pdf = [
    "PyMuPDF>=1.23",
    "pdfplumber>=0.10",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
mmrag-tui = "mmrag.tui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
